<resources>
    <string name="app_name">Complete the BOX</string>
    <string name="initial_box_count">0</string>
    <string name="hint2">Player 2</string>
    <string name="hint1">Player 1</string>
    <string name="wins">WINS</string>
    <string name="home_button_text">Home</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="start_btn_34">3 X 4</string>
    <string name="start_btn_45">4 X 5</string>
    <string name="final_score">FINAL SCORE</string>
</resources>
