<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="tech.techbug.completethebox.StartActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/p1Name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint1"
        android:inputType="textCapWords"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColor="@color/p1BoxColor" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/p2Name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint2"
        android:inputType="textCapWords"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColor="@color/p2BoxColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/startButton34"
            style="@style/startButton"
            android:text="@string/start_btn_34" />

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/startButton45"
            style="@style/startButton"
            android:text="@string/start_btn_45" />

    </LinearLayout>

</LinearLayout>