<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tech.techbug.completethebox.WinnerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/winnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="#263238"
            android:textSize="55sp"
            android:textStyle="bold"
            tools:text="Winner name" />

        <TextView
            android:id="@+id/winsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/wins"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/final_score"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/p1Score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="@color/p1BoxColor"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="P1Score" />

            <TextView
                android:id="@+id/p2Score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="@color/p2BoxColor"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="P2Score" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/home_button_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/play_again_button_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>